@@ -60,10 +60,9 @@ public class GlobalExceptionHandler {
         try {
             errorCode = ErrorCode.valueOf(enumKey);
 
-            var constraintViolation =
-                    exception.getBindingResult().getAllErrors().getFirst().unwrap(ConstraintViolation.class);
+            var constraintViolation = exception.getBindingResult().getAllErrors().get(0);
 
-            attributes = constraintViolation.getConstraintDescriptor().getAttributes();
+            attributes = constraintViolation.unwrap(ConstraintViolation.class).getConstraintDescriptor().getAttributes();
 
             log.info(attributes.toString());
 
